crates/tau-cli/tests/snapshots/help_snapshots__snapshot_session_export_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: "capture_help(&[\"session\", \"export\", \"--help\"])"
---
Export a session in a specific format

Usage: tau session export [OPTIONS] <ID>

Arguments:
  <ID>
          Session id (or 8+ char prefix)

Options:
      --format <FORMAT>
          Output format

          Possible values:
          - jsonl: Raw JSONL passthrough (cat-equivalent)
          - md:    Markdown render (same as `tau session show` human mode)
          - json:  Single envelope JSON object containing header + messages
          
          [default: jsonl]

      --global
          Use global scope

  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

  -h, --help
          Print help (see a summary with '-h')
