crates/tau-cli/tests/snapshots/help_snapshots__snapshot_session_list_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: "capture_help(&[\"session\", \"list\", \"--help\"])"
---
List sessions in the current scope

Usage: tau session list [OPTIONS] [AGENT]

Arguments:
  [AGENT]
          Filter by agent name

Options:
      --global
          Use global scope instead of project scope

      --limit <LIMIT>
          Maximum number of sessions to display (default 20)
          
          [default: 20]

      --all
          Disable the limit; show all sessions

  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

  -h, --help
          Print help (see a summary with '-h')
