crates/tau-cli/tests/snapshots/help_snapshots__top_level_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: s
---
tau runtime CLI

Usage: tau [OPTIONS] <COMMAND>

Commands:
  init       Scaffold a project `tau.toml`
  install    Install a package from a Git URL
  list       List installed packages or available agents
  run        Invoke an agent one-shot
  chat       Open a REPL chat session with an agent
  resolve    Install missing requires.tools dependencies for all agents in the project tau.toml. Project-wide form of the lazy resolve that `tau run` and `tau chat` perform per-agent
  uninstall  Uninstall a package and remove its lockfile entry
  verify     Verify installed packages against the lockfile (spec §3)
  update     Update an installed package to a newer or specific version (spec §2)
  plugin     Plugin debugging utilities (spec §9 debug tier)
  help       Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
