crates/tau-cli/tests/snapshots/help_snapshots__verify_help.snap
---
source: crates/tau-cli/tests/help_snapshots.rs
expression: s
---
Verify installed packages against the lockfile (spec §3)

Usage: tau verify [OPTIONS] [PACKAGE]

Arguments:
  [PACKAGE]
          Package name to verify (default: all installed packages)

Options:
      --version <VERSION>
          Specific version

      --global
          Use global scope

  -v, --verbose...
          Verbosity level. Repeat for more (-v: DEBUG, -vv: TRACE)

  -q, --quiet
          Suppress non-error output (sets tracing to WARN)

      --debug
          Show full error chain + DEBUG-level tracing on failures

      --color <COLOR>
          Color mode for terminal output

          Possible values:
          - always: Always emit ANSI color codes
          - auto:   Auto-detect based on terminal capabilities
          - never:  Never emit color codes
          
          [default: auto]

      --json
          Emit structured JSON output instead of human-readable. Only supported on `install`, `list`, `run`, `init`

      --record-protocol <PATH>
          Mirror every plugin protocol frame to a JSONL file at this path.
          
          Useful for debugging plugin behavior and replaying via `tau plugin protocol decode <path>`. The recording is best-effort per spec §7.8: write/open failures are logged but never abort the invocation.

      --no-sandbox
          Disable sandboxing entirely for this invocation (shorthand for `--sandbox passthrough`). For development and one-off debugging. Auditable in shell history

      --sandbox <SANDBOX>
          Force a specific sandbox adapter kind, overriding the resolver. `--no-sandbox` is shorthand for `--sandbox passthrough`. Conflicts with `--no-sandbox` if both set

          Possible values:
          - native:      Linux landlock + seccomp + namespaces
          - container:   Docker / Podman shell-out
          - passthrough: No isolation (explicit opt-out)

  -h, --help
          Print help (see a summary with '-h')
